--- a/style.css
+++ b/style.css
@@ -3657,11 +3657,12 @@ a.phone-button:focus,
 	width: 724px;
 	flex-shrink: 0;
 	margin-top: 0;
-	flex: 0 0 724px;
+	flex: 1 0 724px;
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	min-height: 100%;
 	padding-top: 130px;
+	padding-bottom: 32px;
 	box-sizing: border-box;
 }
 
@@ -3681,6 +3682,8 @@ a.phone-button:focus,
 		width: 100%;
 		max-width: 100%;
 		padding-top: 95px;
+		min-height: auto;
+		padding-bottom: 0;
 	}
 }
 
@@ -3692,8 +3695,9 @@ a.phone-button:focus,
 	flex: 1;
 	padding-bottom: 32px;
 	box-sizing: border-box;
-	justify-content: space-between;
+	justify-content: flex-start;
 	align-items: flex-start;
+	height: 100%;
 }
 
 .hero-subtitle {
